Update portfolio title and author name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lexion - Portofolio</title>
+  <title>Ray - Portofolio</title>
 <meta property="og:title" content="Lexion - Personal Portfolio" />
 <meta property="og:description" content="Personal web portofolio by Septian (Lee Xiao Jun)." />
 <meta property="og:image" content="https://files.catbox.moe/73l02p.jpg" />
@@ -481,7 +481,7 @@ body {
     </div>
     <div class="text-center text-gray-500 text-xs">
       <p>© 2025 My Portfolio. All rights reserved.</p>
-      <p class="mt-1">Made with ❤️ by septianhdnatta</p>
+      <p class="mt-1">Made with ❤️ by Ray</p>
     </div>
   </div>  <script>
     const themeMenu = document.getElementById('theme-menu');
@@ -564,7 +564,7 @@ body {
 
 function updateBirthdayCountdown() {
     const today = new Date();
-    const birthday = new Date("2026-02-21");
+    const birthday = new Date("2026-04-18");
 
     birthday.setHours(0, 0, 0, 0);
     today.setHours(0, 0, 0, 0);
