--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Me - Lexion</title>
+  <title>About Me - Ray</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = { darkMode: 'class' }
@@ -74,12 +74,12 @@
            onerror="this.onerror=null;this.src='https://files.catbox.moe/lu7u04.png'">
       <i class="fas fa-crown crown"></i>
     </div>
-    <h1 class="text-xl font-bold mt-4">Septian (Lee Xiao Jun)</h1>
+    <h1 class="text-xl font-bold mt-4">Ray (Lee Xiao Jun)</h1>
     <p class="text-gray-600 dark:text-gray-400">Just a passionate builder.</p>
     <div class="flex justify-center flex-wrap gap-2 mt-4">
-      <span class="badge"><i class="fas fa-graduation-cap"></i> SMK Negeri 1 Cikarang Selatan</span>
+      <span class="badge"><i class="fas fa-graduation-cap"></i> SMA Negeri 2 Sumbawa Besar</span>
       <span class="badge"><i class="fas fa-briefcase"></i> Frontend Developer</span>
-      <span class="badge"><i class="fas fa-map-marker-alt"></i> Bekasi, Indonesia</span>
+      <span class="badge"><i class="fas fa-map-marker-alt"></i> Nusa Tenggara Barat, Indonesia</span>
     </div>
     <div class="mt-6 text-sm text-gray-700 dark:text-gray-300 px-2">
       Hi! I'm a web developer who loves crafting intuitive interfaces and sharing open-source projects with the community. Currently building beautiful things with HTML, Tailwind, and JavaScript.
