--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ body {
   <div class="container mx-auto px-4 pt-6 pb-8 max-w-md">
     <div class="text-center mb-8">
       <h2 class="text-xl font-bold text-gray-800 dark:text-white mb-1 flex items-center justify-center gap-1">
-  Septian (Lee Xiao Jun)
+  Ray(Lee Xiao Jun)
   <i class="fas fa-circle-check text-blue-500 text-base" title="Verified"></i>
 </h2>
       <p class="text-gray-600 dark:text-gray-400 mb-4">Hobby</p>
